grammar.js
    source_file: ($) =>
      repeat(
        seq(
          choice($._top_level_declaration, $._statement),
          optional(terminator)
        )
      ),

    _top_level_declaration: ($) =>
      choice(
        $.const_declaration,
        $.global_var_declaration,
        $._c_directive,
        $.function_declaration,
        $.type_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.interface_declaration,
        $.import_declaration,
        $.module_clause
      ),

    _expression: ($) =>
      choice(
        $._single_line_expression,
        $.type_initializer,
        $.array,
        $.fixed_array,
        $.unary_expression,
        $.binary_expression,
        $.in_expression,
        $.is_expression,
        $.selector_expression,
        $.index_expression,
        $.slice_expression,
        $.type_cast_expression,
        $.as_type_cast_expression,
        $.call_expression,
        $.special_call_expression,
        $.fn_literal,
        $.selector_expression,
        $._expression_with_blocks
      ),

    call_expression: ($) =>
      prec.right(
        PREC.comparative,
        seq(
          field(
            "function",
            choice(
              $.identifier,
              $.binded_identifier,
              $.comptime_identifier,
              $.selector_expression,
              $.comptime_selector_expression
            )
          ),
          field("type_parameters", optional($.type_parameters)),
          field("arguments", $.argument_list),
          optional($.option_propagator)
        )
      ),

    _single_line_expression: ($) =>
      prec.left(
        PREC.resolve,
        choice(
          $.identifier,
          $.int_literal,
          $._string_literal,
          $.rune_literal,
          $.pseudo_comptime_identifier,
          $.type_selector_expression,
          $.none,
          $.true,
          $.false
        )
      ),

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    type_initializer: ($) =>
      prec(
        PREC.composite_literal,
        seq(
          field(
            "type",
            choice(
              $.builtin_type,
              $.type_identifier,
              $.type_placeholder,
              $.generic_type,
              $._binded_type,
              $.qualified_type,
              $.pointer_type,
              $.array_type,
              $.fixed_array_type,
              $.map_type,
              $.channel_type
            )
          ),
          field("body", $.literal_value)
        )
      ),

    literal_value: ($) =>
      seq(
        "{",
        repeat(
          seq(
            choice($.keyed_element, alias($._element, $.element)),
            optional(choice(",", terminator))
          )
        ),
        "}"
      ),

    keyed_element: ($) =>
      seq(
        prec(
          PREC.resolve,
          field(
            "name",
            seq(
              choice($._field_identifier, $._string_literal),
              token.immediate(":")
            )
          )
        ),
        field("value", $._element)
      ),

    _element: ($) =>
      prec(
        PREC.resolve,
        choice(
          $._expression,
          $.unsafe_expression,
          $.if_expression,
          $.comptime_if_expression,
          $.match_expression,
          $.lock_expression,
          $.sql_expression
        )
      ),

    map_type: ($) =>
      seq("map[", field("key", $._simple_type), "]", field("value", $._type)),

    channel_type: ($) => seq("chan", field("value", $._simple_type)),

    int_literal: ($) => token(int_literal),

    _string_literal: ($) => choice($.interpreted_string_literal),

    interpreted_string_literal: ($) => quoted_string($, $.string_interpolation),

    string_interpolation: ($) =>
      choice(
        seq("${", $._expression, optional($.format_specifier), "}"),
        seq("$", $._single_line_expression)
      ),

    format_flag: ($) => token(/[gGeEfFcdoxXpsSc]/),

    format_specifier: ($) =>
      seq(
        token(":"),
        choice(
          $.format_flag,
          seq(
            optional(token(/[+-0]/)),
            $.int_literal,
            optional(seq(token("."), $.int_literal)),
            optional($.format_flag)
          )
        )
      ),

    identifier: ($) =>
      token(
        seq(
          choice(unicode_letter_lower, "_"),
          repeat(choice(letter, unicode_digit))
        )
      ),

    _mutable_identifier: ($) => seq(mut_keyword, $.identifier),

    identifier_list: ($) =>
      prec(
        PREC.primary,
        comma_sep1(choice($.identifier, $._mutable_identifier))
      ),

    expression_list: ($) =>
      prec(PREC.resolve, comma_sep1(choice($._expression))),

    parameter_list: ($) => seq("(", comma_sep($.parameter_declaration), ")"),

    argument_list: ($) => seq("(", comma_sep($._expression), ")"),

    _type: ($) => choice($._simple_type, $.option_type, $.multi_return_type),

    _simple_type: ($) =>
      choice(
        $.builtin_type,
        $.type_identifier,
        $.type_placeholder,
        $._binded_type,
        $.qualified_type,
        $.pointer_type,
        $.array_type,
        $.function_type
      ),

    builtin_type: ($) => choice(...builtin_type_keywords),

    _binded_type: ($) => alias($.binded_identifier, $.binded_type),

    qualified_type: ($) =>
      seq(
        field("module", $._module_identifier),
        token.immediate("."),
        field("name", $.type_identifier)
      ),

    type_identifier: ($) =>
      token(seq(unicode_letter_upper, repeat1(choice(letter, unicode_digit)))),

    _module_identifier: ($) => alias($.identifier, $.module_identifier),

    _field_identifier: ($) => alias($.identifier, $.field_identifier),

    _statement_list: ($) =>
      seq(
        $._statement,
        repeat(seq(optional(terminator), $._statement)),
        optional(terminator)
      ),

    _statement: ($) =>
      choice(
        $._simple_statement,
        $.assert_statement,
        $.return_statement,
        $.asm_statement,
        $.go_statement,
        $.goto_statement,
        $.labeled_statement,
        $.empty_labeled_statement,
        $.defer_statement,
        $.for_statement,
        $.comptime_for_statement,
        $.send_statement
      ),

    short_var_declaration: ($) => assignment_statement_support($, ":="),

    assignment_statement: ($) =>
      assignment_statement_support($, choice(...assignment_operators)),

    block: ($) => seq("{", optional($._statement_list), "}"),

    unsafe_expression: ($) => seq(unsafe_keyword, $.block),

    function_declaration: ($) =>
      prec.right(
        seq(
          field("attributes", optional($.attribute_list)),
          optional(pub_keyword),
          fn_keyword,
          field("receiver", optional($.parameter_list)),
          field("langauge", optional($.language_spec)),
          field("name", choice($.identifier, $.overloadable_operator)),
          field("type_parameters", optional($.type_parameters)),
          field("parameters", $.parameter_list),
          field("result", optional($._type)),
          field("body", optional($.block))
        )
      ),

    language_spec: ($) =>
      seq(field("language", choice("C", "JS")), token.immediate(".")),

    selector_expression: ($) =>
      prec(
        PREC.primary,
        seq(
          field("operand", $._expression),
          token.immediate("."),
          field(
            "field",
            choice(
              $.identifier,
              $.comptime_identifier,
              $.selector_expression,
              $.comptime_selector_expression
            )
          )
        )
      ),

    attribute_spec: ($) =>
      prec(
        PREC.attributes,
        choice(
          choice(alias("unsafe", $.identifier), $.identifier),
          seq(
            field("name", choice(alias("unsafe", $.identifier), $.identifier)),
            ":",
            field("value", choice($._string_literal, $.identifier))
          )
        )
      ),

    attribute_declaration: ($) =>
      seq("[", seq($.attribute_spec, repeat(seq(";", $.attribute_spec))), "]"),

    struct_declaration: ($) =>
      seq(
        field("attributes", optional($.attribute_list)),
        optional(pub_keyword),
        struct_keyword,
        field(
          "name",
          prec.dynamic(
            PREC.composite_literal,
            choice($.type_identifier, $._binded_type, $.generic_type)
          )
        ),
        $.struct_field_declaration_list
      ),

    struct_field_declaration_list: ($) =>
      seq(
        "{",
        repeat(
          seq(
            choice($.struct_field_scope, $.struct_field_declaration),
            optional(terminator)
          )
        ),
        "}"
      ),

    struct_field_scope: ($) =>
      seq(
        choice(
          pub_keyword,
          mut_keyword,
          seq(pub_keyword, mut_keyword),
          global_keyword
        ),
        ":"
      ),

    struct_field_declaration: ($) =>
      prec.right(
        choice(
          seq(
            field("name", $._field_identifier),
            field("type", choice($._simple_type, $.option_type)),
            field("attributes", optional($.attribute_declaration)),
            optional(seq("=", field("default_value", $._expression))),
            optional(terminator)
          ),
          field(
            "type",
            seq(
              choice($.type_identifier, $.qualified_type),
              optional(terminator)
            )
          )
        )
      ),

    type_selector_expression: ($) =>
      seq(
        optional(field("type", $.type_identifier)),
        ".",
        field("field_name", $.identifier)
      ),

    module_clause: ($) =>
      seq(
        field("attributes", optional($.attribute_list)),
        "module",
        $._module_identifier
      ),
