test/corpus/string_interpolation_format_specifier.txt
===
String Interpolation with Format Specifiers
===

'${10:10o}'
'${a:-10}'
'${b:10.3f}'
'${c:010.4g}'

---

(source_file
(interpreted_string_literal
  (string_interpolation
    (int_literal)
    (format_specifier
      (int_literal)
      (format_flag))))
(interpreted_string_literal
  (string_interpolation
    (identifier)
    (format_specifier
      (int_literal))))
(interpreted_string_literal
  (string_interpolation
    (identifier)
    (format_specifier
      (int_literal)
      (int_literal)
      (format_flag))))
(interpreted_string_literal
  (string_interpolation
    (identifier)
    (format_specifier
      (int_literal)
      (int_literal)
      (format_flag)))))
