test/corpus/struct_declaration.txt
==================
Struct declaration
==================

struct Hello {
  hidden string
pub:
  foo string [json:'foo'] = 'hey'
  bar int = 10
pub mut:
  baz i32
__global:
  blu i64
}

---

(source_file
  (struct_declaration
    (type_identifier)
    (struct_field_declaration_list
      (struct_field_declaration
        (field_identifier) (builtin_type))
      (struct_field_scope (pub_keyword))
      (struct_field_declaration
        (field_identifier) 
        (builtin_type)
        (attribute_declaration
          (attribute_spec (identifier) (interpreted_string_literal)))
        (interpreted_string_literal))
      (struct_field_declaration
        (field_identifier) (builtin_type) (int_literal))
      (struct_field_scope (pub_keyword) (mut_keyword))
      (struct_field_declaration
        (field_identifier) (builtin_type))
      (struct_field_scope (global_keyword))
      (struct_field_declaration
        (field_identifier) (builtin_type)))))
