test/corpus/struct_declaration_embed.txt
===
Struct declaration with embedded type
===

struct Stmt {
  ast.Node
  Foo
  name string
}

---

(source_file
  (struct_declaration
    (type_identifier)
    (struct_field_declaration_list
      (qualified_type 
        (module_identifier) (type_identifier))
      (type_identifier)
      (struct_field_declaration
        (field_identifier) (builtin_type)))))
