test/corpus/type_initializer_chan.txt
===
Channel type initializer
===

fn main() {
  t := chan f64{}
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (short_var_declaration
        (identifier_list (identifier))
        (expression_list
          (type_initializer 
            (channel_type (type_identifier))
            (literal_value)))))))
