test/corpus/unsafe_expression.txt
===
Unsafe Statement
===

fn main() {
  unsafe {
    something.free()
  }

  test := unsafe { 1 }
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block
      (unsafe_expression
        (block
          (call_expression 
            (selector_expression (identifier) (identifier)) 
            (argument_list))))
      (short_var_declaration
        (expression_list (identifier))
        (expression_list
          (unsafe_expression
            (block (int_literal))))))))
